# Eaifdk

./: CMakeLists.txt  README.md  setup.sh
board/: darknet_to_board.py  index.html  iou_to_avg.py  loss_to_avg.py  server.js  starrt.js
board/css/: style.css
dataset/backup/: weights_10000.weights  weights_100000.weights  weights_110000.weights  weights_120000.weights  weights_130000.weights  weights_140000.weights  weights_150000.weights  weights_160000.weights  weights_170000.weights  weights_180000.weights  weights_190000.weights  weights_20000.weights  weights_200000.weights  weights_210000.weights  weights_220000.weights  weights_230000.weights  weights_240000.weights  weights_250000.weights  weights_260000.weights  weights_270000.weights  weights_280000.weights  weights_290000.weights  weights_30000.weights  weights_300000.weights  weights_310000.weights  weights_320000.weights  weights_330000.weights  weights_340000.weights  weights_350000.weights  weights_360000.weights  weights_370000.weights  weights_380000.weights  weights_390000.weights  weights_40000.weights  (+17 more)
network/: CMakeLists.txt
predition/: h5_predition.py  pb_prediction.py  tflite_prediction.py
quantification/: h5_to_pb.py  pb_to_tflite.py
script/: anchors.sh  autoLabel.sh  board.sh  build.sh  export.sh  mAP.sh  package.txt  reName.sh  recall.sh  requirements.txt  sample.sh  seeWeights.sh  test.sh  train.sh  update.sh  view.sh
test/: index.html  server.js  start.js
tools/: CMakeLists.txt  unified_dataset_name.py
tools/efdk/source/: CMakeLists.txt
tools/efdk/source/func/: main.cpp
(+219 files in other folders)
